fixed wrapping categories

--- a/_sass/categories.scss
+++ b/_sass/categories.scss
@@ -13,6 +13,7 @@
   display: inline-block;
   padding: 0 0.2rem;
   margin-right: 0.2rem;
+  margin-bottom: 0.4rem;
   border-radius: 0.2rem;
 
   background-color: rgb(214, 214, 214);
