--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -8,11 +8,11 @@
 }
 
 .post-categories {
-  margin-bottom: 0.4rem;
 }
 
 .post-date {
   margin-bottom: 0.4rem;
+  font-style: italic;
 }
 
 .post-status {
